--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "nodemon": "^2.0.2",
     "ts-node": "^8.7.0",
     "tslint": "^6.1.0",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+  "underscore": ">=1.12.1"
+
   },
   "dependencies": {
     "@types/clear": "^0.1.0",
